5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1595_2895.log
== TEST (2019-03-31 02:35:52) 
-- CODE:
#quantidade de jogos
qntd = input("quantidade de jogos:")
#valor unitário
valor = float(input("valor unitario:"))
#valor do frete
frete = int(input("frete:"))
#preço total
preço = qntd*valor+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:36:49) 
-- CODE:
#quantidade de jogos
qntd = input("quantidade de jogos:")
#valor unitário
valor = int(input("valor unitario:"))
#valor do frete
frete = float(input("frete:"))
#preço total
preço = qntd*valor+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:37:04) 
-- CODE:
#quantidade de jogos
qntd = input("quantidade de jogos:")
#valor unitário
valor = int(input("valor unitario:"))
#valor do frete
frete = float(input("frete:"))
#preço total
preço = qntd*valor+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:37:50) 
-- CODE:
#quantidade de jogos
qntd = input("quantidade de jogos:")
#valor unitário
valor = int(input("valor unitario:"))
#valor do frete
frete = float(input("frete:"))
#preço total
preço = valor*qntd+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:38:30) 
-- CODE:
#quantidade de jogos
qntd = input("quantidade de jogos:")
#valor unitário
valor = int(input("valor unitario:"))
#valor do frete
frete = int(input("frete:"))
#preço total
preço = valor*qntd+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:39:18) 
-- CODE:
#quantidade de jogos
qntd = ininput("quantidade de jogos:")
#valor unitário
valor = int(input("valor unitario:"))
#valor do frete
frete = int(input("frete:"))
#preço total
preço = valor*qntd+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qntd = ininput()
NameError: name 'ininput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:39:35) 
-- CODE:
#quantidade de jogos
qntd = int(input("quantidade de jogos:"))
#valor unitário
valor = int(input("valor unitario:"))
#valor do frete
frete = int(input("frete:"))
#preço total
preço = valor*qntd+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:39:52) 
-- CODE:
#quantidade de jogos
qntd = int(input("quantidade de jogos:"))
#valor unitário
valor = int(input("valor unitario:"))
#valor do frete
frete = int(input("frete:"))
#preço total
preço = valor*qntd+frete
print(preço)
-- EXECUTION TIME:
0.140941
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:40:25) 
-- CODE:
#quantidade de jogos
qntd = int(input("quantidade de jogos:"))
#valor unitário
valor = int(input("valor unitario:"))
#valor do frete
frete = int(input("frete:"))
#preço total
preço = valor*qntd+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:41:45) 
-- CODE:
#quantidade de jogos
var = input("Instrucoes:"))
#valor unitário
valor = float(input("valor unitario:"))
#valor do frete
frete = int(input("frete:"))
#preço total
preço = valor*qntd+frete
print(preço)
-- ERROR:
File "XXXX", line 2
    var = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:41:57) 
-- CODE:
#quantidade de jogos
var = input("Instrucoes:")
#valor unitário
valor = float(input("valor unitario:"))
#valor do frete
frete = int(input("frete:"))
#preço total
preço = valor*qntd+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:43:15) 
-- CODE:
#quantidade de jogos
var = input("Instrucoes:")
#valor unitário
valor = float(input("valor unitario:"))
#valor do frete
frete = int(input("frete:"))
#preço total
preço = frete+valor*var
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:43:54) 
-- CODE:
#quantidade de jogos
var = input("Instrucoes:")
#valor unitário
valor = (input("valor unitario:"))
#valor do frete
frete = int(input("frete:"))
#preço total
preço = frete+valor*var
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete = int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:47:19) 
-- CODE:
#quantidade de jogos
jogos = input("Quantidade de jogos:")

#valor unitário
valor = int(input("valor unitario:"))

#valor do frete
frete = int(input("frete:"))

#preço total
preço = valor*jogos+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:47:59) 
-- CODE:
#quantidade de jogos
jogos = int(input("Quantidade de jogos:")

#valor unitário
valor = int(input("valor unitario:"))

#valor do frete
frete = int(input("frete:"))

#preço total
preço = valor*jogos+frete
print(preço)
-- ERROR:
File "XXXX", line 5
    valor = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:48:10) 
-- CODE:
#quantidade de jogos
jogos = int(input("Quantidade de jogos:"))

#valor unitário
valor = int(input("valor unitario:"))

#valor do frete
frete = int(input("frete:"))

#preço total
preço = valor*jogos+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:48:26) 
-- CODE:
#quantidade de jogos
jogos = int(input("Quantidade de jogos:"))

#valor unitário
valor = int(input("valor unitario:"))

#valor do frete
frete = int(input("frete:"))

#preço total
preço = valor*jogos+frete
print(preço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:48:41) 
-- CODE:
#quantidade de jogos
jogos = int(input("Quantidade de jogos:"))

#valor unitário
valor = int(input("valor unitario:"))

#valor do frete
frete = int(input("frete:"))

#preço total
preço = valor*jogos+frete
print(preço)
-- EXECUTION TIME:
0.147238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 5, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:51:41) 
-- CODE:
#quantidade de jogos
jogos = float(input("Quantidade de jogos:"))

#valor unitário
valor = float(input("valor unitario:"))

#valor do frete
frete = float(input("frete:"))

#preço total
preço = jogos*valor+frete
print(preço)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:52:11) 
-- CODE:
#quantidade de jogos
jogos = float(input("Quantidade de jogos:"))

#valor unitário
valor = float(input("valor unitario:"))

#valor do frete
frete = float(input("frete:"))

#preço total
preço = jogos*valor+frete
print(preço)
-- EXECUTION TIME:
0.134649
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
